# clan-quest-osrs-discord-bot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  logging.conf  pyproject.toml
.github/workflows/: bandit.yml  flake8.yml  github_release.yml  pylint.yml  ruff.yml  unit_tests.yml
growlery/: __main__.py  config.py  http_request.py  main.py  table.py
growlery/cogs/: __init__.py  hiscores.py
src/growlery/: __init__.py  __main__.py  config.py  http_request.py  main.py  table.py
src/growlery/cogs/: __init__.py  hiscores.py
tests/: conftest.py  test_default.py  test_hiscores.py  test_http_request.py
