[build-system]
requires = ["poetry-core>=1.0.0", "wheel",]
build-backend = "poetry.core.masonry.api"


[tool.coverage.report]
exclude_lines = [
    "pragma: not covered",
    "@overload",
    "if TYPE_CHECKING:"
]


[tool.coverage.run]
branch = true
relative_files = true
omit = [
    ".tox/*",
    "tests/*",
    "main.py",
    "__main__.py",
]


[tool.poetry]
name = "growlery"
version = "0.3.1"
description = "An OSRS Discord bot for Clan Quest."

packages = [
    { include = "growlery", from = "src" },
]

authors = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]
maintainers = ["Lari Liuhamo <lari.liuhamo+pypi@gmail.com>",]

include = []
license = "MIT"
readme = "README.md"

homepage = "https://pypi.org/project/clan-quest-osrs-discord-bot/"
repository = "https://github.com/Diapolo10/clan-quest-osrs-discord-bot"
documentation = "https://github.com/Diapolo10/clan-quest-osrs-discord-bot/tree/main/docs"

keywords = [
    "python3",
    "discord",
    "runescape",
    "osrs",
    "oldschool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications :: Chat",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.3"
"discord.py" = "^2.4.0"
python-dotenv = "^1.0.1"
reactionmenu = "^3.1.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"


[tool.poetry.group.linters]
optional = true


[tool.poetry.group.linters.dependencies]
ruff = "^0.9.10"


[tool.poetry.group.tests]
optional = true


[tool.poetry.group.tests.dependencies]
dpytest = "^0.7.0"
pytest = "^8.3.3"
pytest-asyncio = ">=0.24,<0.26"
pytest-cov = ">=5,<7"
pytest-mock = "^3.14.0"
pytest-rerunfailures = "^15.0.0"
tox = "^4.23.2"
tox-gh-actions = "^3.2.0"


[tool.poetry.urls]
"Tracker" = "https://github.com/Diapolo10/clan-quest-osrs-discord-bot/issues"
"Changelog" = "https://github.com/Diapolo10/clan-quest-osrs-discord-bot/blob/main/CHANGELOG.md"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules \
--cov=./ \
--cov-append \
--cov-report html:tests/reports/coverage-html \
--cov-report xml:tests/reports/coverage.xml \
--ignore=docs/
"""
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:discord*:"
]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"


[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Disabled due to formatter conflict
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
]
line-length = 120
# preview = true
show-fixes = true
src = ["src",]
target-version = "py310"


[tool.ruff.lint.flake8-copyright]
author = "Lari Liuhamo"


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"


[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.ruff.lint.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401", "F403", "F405",]
"tests/*" = ["ANN", "ARG", "INP001", "PT011", "S101", "PLR2004",]


[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80


[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, py313, pypy3

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313
    pypy-3.10: pypy3

[testenv]
passenv = GITHUB_*
allowlist_externals = poetry

commands =
    poetry run pytest
    poetry run coverage report
"""
